<resources>
    <string name="app_name">ProjectX</string>
    <string name="freq">Your frequency</string>
    <string name="timeinfo">time</string>
    <string name="mesTime">measurment time</string>
    <string name="bob">Bob frequency</string>
    <string name="start">START</string>
    <string name="left">L</string>
    <string name="right">R</string>
    <string name="save">SAVE</string>
    <string name="back">BACK</string>
    <string name="saveInfo">Enter a filename to save data</string>
    <string name="filename">myFile.csv</string>
</resources>
