<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kasia.projectx.MainActivity"
    >

    <ImageView
        android:id="@+id/background1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/waves2"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/background2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/waves2"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/LeftBtn"
        android:layout_width="200dp"
        android:layout_height="110dp"
        android:onClick="OnClickLeftBtn"
        android:text="@string/left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/RightBtn"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/RightBtn"
        android:layout_width="200dp"
        android:layout_height="110dp"
        android:onClick="OnClickRightBtn"
        android:text="@string/right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <SeekBar
        android:id="@+id/timeSeek"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/mTime"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/timeInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/timeInfo" />

    <TextView
        android:id="@+id/timeInfo"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:text="@string/timeinfo"
        app:layout_constraintBottom_toBottomOf="@+id/startBtn"
        app:layout_constraintEnd_toStartOf="@+id/time"
        app:layout_constraintTop_toTopOf="@+id/startBtn" />

    <TextView
        android:id="@+id/BobInfo"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/bob"
        app:layout_constraintEnd_toStartOf="@+id/bob"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startBtn" />

    <TextView
        android:id="@+id/bob"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        app:layout_constraintEnd_toStartOf="@+id/frequencyInfo"
        app:layout_constraintTop_toBottomOf="@+id/startBtn" />

    <TextView
        android:id="@+id/frequency"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startBtn" />

    <TextView
        android:id="@+id/frequencyInfo"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/freq"
        app:layout_constraintEnd_toStartOf="@+id/frequency"
        app:layout_constraintTop_toBottomOf="@+id/startBtn" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:onClick="OnClickStartBtn"
        android:text="@string/start"
        app:layout_constraintEnd_toStartOf="@+id/timeInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mTimeInfo" />

    <TextView
        android:id="@+id/mTimeInfo"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/mesTime"
        app:layout_constraintEnd_toStartOf="@+id/timeSeek"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mTime"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/rower2"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="140dp"
        android:src="@drawable/rower2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startBtn" />

    <ImageView
        android:id="@+id/rower1"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="140dp"
        android:src="@drawable/rower1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startBtn" />

    <ImageView
        android:id="@+id/rower2b"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="140dp"
        android:src="@drawable/rower1b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startBtn" />

    <ImageView
        android:id="@+id/rower1b"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="140dp"
        android:src="@drawable/rower2b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startBtn" />

    <TextView
        android:id="@+id/BOB"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rower2" />

    <TextView
        android:id="@+id/You"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rower1b" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="150dp"
        android:layout_marginTop="64dp"
        android:onClick="OnClickSaveBtn"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/background2"
        app:layout_constraintTop_toBottomOf="@+id/frequencyInfo" />

</android.support.constraint.ConstraintLayout>
